# 2026_R-D

./: .gitignore  README.md  pyproject.toml  requirements-gpu-cu121.txt  requirements.txt  reserach_prompt.txt
Related_work/: bert_heavy_llm_final_novelty_directions.md  category_a_absa_pricing_papers.md  dynamic_pricing_issue_research  existing_dp_solutions_research.md  hotel_absa_core_technology_document_jp.md  local_dp_app_rd_ideas.md  open_accommodation_tourism_datasets.md  review_embedding_clustering_llm_persona_papers.md  senticse_persona_occupancy_technical_deepdive.md  sentiment_contrastive_persona_rd_plan.md
configs/: experiment.example.yaml  experiment.smoke.yaml
delete_md/: dynamic_pricing_review_survey.md  research_design_candidates.md  research_plan_best.md  research_plan_volatility_absa_pricing.md  review_based_pricing_support_agent_survey.md  review_price_significance_and_datasets.md  simulation_evaluation_design.md
docs/: current_technical_design.md  data_sources.md  persona_generation_experiment_report.md  rd_experiment_master_design.md
lab_doc/: 0519_打合せ資料.pptx  LLM・BERT説明資料.pptx  nlp_seminar_complete.md  ~$0519_打合せ資料.pptx  研究紹介 - コピー.pptx  研究紹介-自己紹介.pptx  研究紹介.pptx
scripts/: bootstrap.ps1  download_hf_models.py  run_experiment.ps1
src/sentipersona_airbnb/: __init__.py  cli.py  clustering.py  config.py  data.py  download.py  evaluation.py  modeling.py  persona.py  sentiment.py  timeseries.py  utils.py
tests/: test_cleaning.py  test_data_window.py  test_modeling.py  test_occupancy.py  test_persona.py  test_sentiment.py  test_timeseries.py
