[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentipersona-airbnb"
version = "0.1.0"
description = "SentiCSE-based Airbnb review persona discovery and occupancy analysis pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "hdbscan>=0.8.38",
  "joblib>=1.4.2",
  "matplotlib>=3.8.4",
  "numpy>=1.26.4,<2.0",
  "ollama>=0.3.3",
  "pandas>=2.2.2",
  "pyarrow>=16.1.0",
  "pyyaml>=6.0.1",
  "requests>=2.32.3",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.1",
  "statsmodels>=0.14.2",
  "torch>=2.3.1",
  "tqdm>=4.66.4",
  "transformers>=4.43.0",
  "umap-learn>=0.5.6",
  "xgboost>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.2",
  "ruff>=0.5.0",
]
fasttext = [
  "fasttext-wheel>=0.9.2",
]
viz = [
  "plotly>=5.22.0",
  "seaborn>=0.13.2",
  "shap>=0.45.1",
]

[project.scripts]
sentipersona = "sentipersona_airbnb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
